[package]
name = "advent2020"
version = "0.1.0"
authors = ["Victor Barua <victor.barua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01"
path = "src/01/bin/main.rs"

[[bin]]
name = "02"
path = "src/02/bin/main.rs"

[[bin]]
name = "03"
path = "src/03/bin/main.rs"

[[bin]]
name = "04"
path = "src/04/bin/main.rs"

[[bin]]
name = "05"
path = "src/05/bin/main.rs"